--- a/blog/package.json
+++ b/blog/package.json
@@ -16,7 +16,9 @@
     "@fontsource/reenie-beanie": "^4.5.9",
     "@fontsource/twinkle-star": "^4.5.9",
     "@fontsource/vollkorn": "^4.5.12",
+    "@sanity/client": "^4.0.1",
     "astro": "^1.9.0",
+    "astro-sanity": "^1.1.2",
     "tailwindcss": "^3.0.24"
   }
 }
