--- a/blog/package.json
+++ b/blog/package.json
@@ -11,14 +11,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^2.1.3",
+    "@astrojs/tailwind": "6.0.2",
     "@fontsource/mansalva": "^4.5.12",
     "@fontsource/reenie-beanie": "^4.5.9",
     "@fontsource/twinkle-star": "^4.5.9",
     "@fontsource/vollkorn": "^4.5.12",
-    "@sanity/client": "^4.0.1",
-    "astro": "^1.9.0",
-    "astro-sanity": "^1.1.2",
+    "@sanity/astro": "^3.2.6",
+    "@sanity/client": "^6.29.1",
+    "astro": "5.7.12",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-is": "^19.1.0",
+    "sanity": "^3.88.2",
+    "styled-components": "^6.1.18",
     "tailwindcss": "^3.0.24"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
